[tool.poetry]
name = "template"
version = "0.1.0"
description = "Template Project"
authors = ["Ryan Lagoy <rlagoy@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
pylint = "^2.11.1"
black = "22.3.0"
pre-commit = "^2.19.0"
pre-commit-hooks = "^4.0.1"
reorder-python-imports = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
