[tool.poetry]
name = "flik-demo"
version = "0.1.0"
description = "Flik Mavlink Demonstration"
authors = ["Ryan Lagoy <rlagoy@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pymavlink = "^2.4.49"
pyserial = "^3.5"
mavproxy = "^1.8.74"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pylint = "^4.0.2"
black = "25.9.0"
pre-commit = "^6.0.0"
reorder-python-imports = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
files = ["."]

ignore_missing_imports = true
